    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)

  IMPROVEMENTS
 
    HAMA-366: Remove unnecessary dependencies (Tommaso Teofili)
    HAMA-365: TestBSPPeer doesn't check if the correct 
                       number of messages have been received (Miklos Erdelyi via edwardyoon)
    HAMA-298: Implement the kill method for JobInProgress (edwardyoon)
    HAMA-353: Add "random communication benchmark" tool (edwardyoon)
    HAMA-351: Improvement of lack of info- about the output of examples (edwardyoon)
    HAMA-348: Remove hard-coded javaOpts (edwardyoon)
    HAMA-347: Add implementation of umbilical interface (edwardyoon)
    HAMA-346: Modify MniCluster so that developers can benefit when testing using Junit
                       (ChiaHung Lin via edwardyoon)
    HAMA-340: Implementation of job submit command (edwardyoon)   
    HAMA-278: Few minor refactoring (edwardyoon)
    HAMA-336: The all taskid variable's type should be declared as a TaskAttemptID
                       (edwardyoon)
    HAMA-331: Removing JobInProgressListener 
                       and adding JobInitThread to BSPMaster (edwardyoon)
    HAMA-334: Removing "java5.home" env key from build script. (edwardyoon)
    HAMA-332: Renaming some members in BSPMaster 
                to follow the Hama terminology (Filipe Manana via edwardyoon)
    HAMA-329: Add taskNum argument to pi estimator (edwardyoon)
    HAMA-313: Remove LocalJobRunner (edwardyoon)
    HAMA-321: Allows user to set the number of tasks (edwardyoon) 
    HAMA-282: Add superstep counter (Filipe Manana via edwardyoon)
    HAMA-327: Add overview for javadoc (edwardyoon)