@@ -52,6 +52,7 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
  
+    HAMA-369: Reduce overhead of local communications (Miklos Erdelyi)
     HAMA-366: Remove unnecessary dependencies (Tommaso Teofili)
     HAMA-365: TestBSPPeer doesn't check if the correct 
                        number of messages have been received (Miklos Erdelyi via edwardyoon)
